--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# All LaTeX files
+*.aux
+*.fdb_latexmk
+*.log
+*.synctex.gz
+*.toc
+*.bbl
+*.blg
