--- a/brewduino-server/pom.xml
+++ b/brewduino-server/pom.xml
@@ -22,6 +22,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.neuronrobotics</groupId>
+            <artifactId>nrjavaserial</artifactId>
+            <version>3.11.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
