--- a/brewduino-server/pom.xml
+++ b/brewduino-server/pom.xml
@@ -7,7 +7,7 @@
     <groupId>cs413.group-01</groupId>
     <artifactId>brewduino-server</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
     <name>brewduino-server</name>
     <description>Backend for the Brewduino</description>
 
@@ -22,11 +22,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.neuronrobotics</groupId>
-            <artifactId>nrjavaserial</artifactId>
-            <version>3.11.0</version>
-        </dependency>
     </dependencies>
 
     <properties>
@@ -38,6 +33,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
